--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
-    "react-router5": "^5.5.2",
     "react-scripts": "1.1.2",
     "react-transition-group": "^2.3.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-router5": "^5.2.1",
-    "router5": "^5.8.3",
-    "router5-transition-path": "^5.1.1"
+    "@reach/router": "1.2.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -30,5 +27,6 @@
   "devDependencies": {
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2"
-  }
+  },
+  "repository": "git@github.com:asnikitin/app-store-tutorial.git"
 }
